updated JUnit test files